<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.aboutme.FirstFragment"
        android:label="@string/title_biography"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.aboutme.SecondFragment"
        android:label="@string/title_hobbies"
        tools:layout="@layout/fragment_second" />

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.aboutme.ThirdFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_third" />

</navigation>