<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_hobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_contact"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <Button
            android:id="@+id/button_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_hobbies"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/button_hobbies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1"/>    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>